--- a/src/main.css
+++ b/src/main.css
@@ -11,3 +11,58 @@ body {
   right: 0;
   opacity: 0.6;
 }
+
+.clock-container {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  width: 30%;
+  height: 15%;
+  margin-top: 4%;
+  margin-right: 2.5%;
+  margin-left: 5%;
+  padding-left: 1%;
+  padding-top: 2%;
+}
+
+.title {
+  color: #9EBBD8;
+  font-weight: 900;
+  font-size: 64px;
+  user-select: none;
+  align-content: flex-end;
+}
+
+@viewport {
+  width: device-width;
+  zoom: 1;
+}
+
+@media screen and (min-width: 150px) and (max-width: 960px) {
+  #root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image {
+    display: none;
+  }
+
+  .clock-container {
+    margin-bottom: 10%;
+    margin-top: 10%;
+    width: 75%;
+    margin-right: 2.5%;
+    margin-left: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 5%;
+  }
+
+  .title {
+    font-size: 36px !IMPORTANT; 
+  }
+}
